
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int ;
struct timeval {int tv_sec; int tv_usec; } ;
typedef int fd_set ;


 int FD_ZERO (int *) ;
 int debug ;
 int printf (char*,int) ;
 int select (int ,int *,int *,int *,struct timeval*) ;

void u_sleep(u_int u_sec)
{
 struct timeval to;
 fd_set readset, writeset;

 if(debug > 3) printf("sleeping for %u microseconds\n", u_sec);
 if(!u_sec) return;

 to.tv_sec = u_sec / 1000000;
 to.tv_usec = u_sec % 1000000;
 FD_ZERO(&writeset);
 FD_ZERO(&readset);
 select(0, &readset, &writeset, ((void*)0), &to);

 return;
}
