; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_20810.c_u_sleep.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_20810.c_u_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

@debug = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"sleeping for %u microseconds\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @u_sleep(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.timeval, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* @debug, align 4
  %7 = icmp sgt i32 %6, 3
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32, i32* %2, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %11
  br label %25

15:                                               ; preds = %11
  %16 = load i32, i32* %2, align 4
  %17 = sdiv i32 %16, 1000000
  %18 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* %2, align 4
  %20 = srem i32 %19, 1000000
  %21 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 1
  store i32 %20, i32* %21, align 4
  %22 = call i32 @FD_ZERO(i32* %5)
  %23 = call i32 @FD_ZERO(i32* %4)
  %24 = call i32 @select(i32 0, i32* %4, i32* %5, i32* null, %struct.timeval* %3)
  br label %25

25:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
